FIX: Flatpikr validation error on mobile

--- a/src/assets/scss/variables.scss
+++ b/src/assets/scss/variables.scss
@@ -45,7 +45,7 @@ $input-color: $text_color;
 $input-border-color: $page_lighter_gray;
 $input-placeholder-color: $page_gray_text;
 $input-padding-y: $btn-padding-y;
-$input-padding-x: $btn-padding-x;
+$input-padding-x: .5rem;
 
 $input-focus-box-shadow: none;
 $input-focus-border-color: $primary;
